--- a/Resources/Prototypes/_Carmine/Maps/release_devmap.yml
+++ b/Resources/Prototypes/_Carmine/Maps/release_devmap.yml
@@ -17,12 +17,12 @@
       components:
         - type: StationNameSetup
           mapNameTemplate: 'Carmine Devmap - Release'
-        - type: VesselDesignation
-          designation: vessel-designation-headquarters
-        - type: VesselDescription
-          description: A place of ample tests.
-        - type: VesselMusic
-          ambientMusicPrototype: PortBalreskaMusic
+        # - type: VesselDesignation
+        #   designation: vessel-designation-headquarters
+        # - type: VesselDescription
+        #   description: A place of ample tests.
+        # - type: VesselMusic
+        #   ambientMusicPrototype: PortBalreskaMusic
         - type: Grammar
           attributes:
             proper: true
