combat mode button port from WD #834 (#10)

--- a/Resources/Prototypes/Entities/Mobs/NPCs/space.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/space.yml
@@ -496,8 +496,8 @@
     - VimPilot
     - ChefPilot
     - Meat
-  - type: CombatMode
-    combatToggleAction: ActionCombatModeToggleOff
+  # - type: CombatMode
+  #   combatToggleAction: ActionCombatModeToggleOff
   - type: Bloodstream
     bloodReferenceSolution:
       reagents:
