--- a/Resources/Prototypes/Actions/types.yml
+++ b/Resources/Prototypes/Actions/types.yml
@@ -222,26 +222,28 @@
   - type: InstantAction
     event: !type:ToggleClothingEvent
 
-- type: entity
-  parent: BaseMentalAction
-  id: ActionCombatModeToggle
-  name: "[color=red]Combat Mode[/color]"
-  description: Enter combat mode
-  components:
-  - type: Action
-    icon: Interface/Actions/harmOff.png
-    iconOn: Interface/Actions/harm.png
-    priority: -100
-  - type: InstantAction
-    event: !type:ToggleCombatActionEvent
+# WD edit
+# - type: entity
+#   parent: BaseMentalAction
+#   id: ActionCombatModeToggle
+#   name: "[color=red]Combat Mode[/color]"
+#   description: Enter combat mode
+#   components:
+#   - type: Action
+#     icon: Interface/Actions/harmOff.png
+#     iconOn: Interface/Actions/harm.png
+#     priority: -100
+#   - type: InstantAction
+#     event: !type:ToggleCombatActionEvent
 
-- type: entity
-  parent: ActionCombatModeToggle
-  id: ActionCombatModeToggleOff
-  components:
-  - type: Action
-    enabled: false
-    autoPopulate: false
+# WD edit
+# - type: entity
+#   parent: ActionCombatModeToggle
+#   id: ActionCombatModeToggleOff
+#   components:
+#   - type: Action
+#     enabled: false
+#     autoPopulate: false
 
 - type: entity
   parent: BaseAction
