detailed examine, logging examine in chat, hits-to-kill logging from goob /2395 (#13)

--- a/Resources/Prototypes/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/base.yml
@@ -209,6 +209,7 @@
     - FootstepSound
     - DoorBumpOpener
     - AnomalyHost
+  - type: ExaminableCharacter # WWDP
 
 - type: entity
   save: false
