--- a/Resources/Prototypes/Entities/Objects/Tools/gas_tanks.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/gas_tanks.yml
@@ -33,7 +33,7 @@
       temperature: 293.15
     tankLowPressure: 30.0
   - type: Explosive
-    explosionType: MicroBomb
+    explosionType: Default
     maxIntensity: 20
   - type: MeleeWeapon
     wideAnimationRotation: 45
