--- a/Resources/Prototypes/Maps/debug.yml
+++ b/Resources/Prototypes/Maps/debug.yml
@@ -6,13 +6,13 @@
   minPlayers: 0
   stations:
     Empty:
-      stationProto: StandardNanotrasenStation
+      stationProto: StandardStation
       components:
         - type: StationNameSetup
           mapNameTemplate: "Sepna Starsystem"
         # - type: StationJobs
         #   availableJobs:
-        #     Passenger: [ 0, 0 ]
+        #     Assistant: [ 0, 0 ]
 
 - type: gameMap
   id: Dev
@@ -21,35 +21,10 @@
   minPlayers: 0
   stations:
     Dev:
-      stationProto: StandardNanotrasenStation
+      stationProto: StandardStation
       components:
         - type: StationNameSetup
           mapNameTemplate: "Dev"
         - type: StationJobs
           availableJobs:
             Captain: [ -1, -1 ]
-#            LevymanDSM: [ -1, -1 ]
-#            InfanteerNCSP: [ -1, -1 ]
-#            PartisanNCWL: [ -1, -1 ]
-#            CorpsecSHI: [ -1, -1 ]
-        # Goobstation blob-config-start DEBUG
-        # - type: StationBlobConfig
-        #   stageBegin: 20
-        #   stageCritical: 50
-        #   stageTheEnd: 100
-        # Goobstation blob-config-end
-
-- type: gameMap
-  id: TestTeg
-  mapName: Test TEG
-  mapPath: /Maps/Test/test_teg.yml
-  minPlayers: 0
-  stations:
-    TEG:
-      stationProto: TestStation
-      components:
-        - type: StationNameSetup
-          mapNameTemplate: "TEG"
-        - type: StationJobs
-          availableJobs:
-            ChiefEngineer: [ -1, -1 ]
