--- a/Resources/Prototypes/Entities/Objects/Materials/Sheets/glass.yml
+++ b/Resources/Prototypes/Entities/Objects/Materials/Sheets/glass.yml
@@ -74,7 +74,7 @@
     heldPrefix: glass
   - type: FloorTile
     outputs:
-    - FloorGlass
+    - Plating
   - type: Construction
     graph: Glass
     node: SheetGlass
@@ -135,7 +135,7 @@
     heldPrefix: rglass
   - type: FloorTile
     outputs:
-    - FloorRGlass
+    - Plating
   - type: Construction
     graph: Glass
     node: SheetRGlass
@@ -188,133 +188,3 @@
         - ReagentId: Carbon
           Quantity: 0.5
         canReact: false
-
-- type: entity
-  parent: SheetGlassBase
-  id: SheetPGlass
-  name: plasma glass
-  description: A sheet of translucent plasma.
-  suffix: Full
-  components:
-  - type: PhysicalComposition
-    materialComposition:
-      PlasmaGlass: 100
-  - type: Stack
-    stackType: PlasmaGlass
-    baseLayer: base
-    layerStates:
-    - pglass
-    - pglass_2
-    - pglass_3
-  - type: Sprite
-    state: pglass_3
-    layers:
-    - state: pglass_3
-      map: ["base"]
-  - type: Item
-    heldPrefix: pglass
-  - type: Construction
-    graph: Glass
-    node: SheetPGlass
-  - type: Destructible
-    thresholds:
-    - trigger:
-        !type:DamageTrigger
-        damage: 100
-      behaviors:
-      - !type:DoActsBehavior
-        acts: [ "Destruction" ]
-    - trigger:
-        !type:DamageTrigger
-        damage: 50
-      behaviors:
-      - !type:PlaySoundBehavior
-        sound:
-          collection: GlassBreak
-          params:
-            volume: -4
-      - !type:SpawnEntitiesBehavior
-        spawn:
-          ShardGlassPlasma:
-            min: 1
-            max: 1
-      - !type:DoActsBehavior
-        acts: [ "Destruction" ]
-
-- type: entity
-  parent: SheetPGlass
-  id: SheetPGlass1
-  name: plasma glass
-  suffix: Single
-  components:
-  - type: Sprite
-    state: pglass
-  - type: Stack
-    stackType: PlasmaGlass
-    count: 1
-  - type: Extractable
-    grindableSolutionName: pglass
-  - type: SolutionContainerManager
-    solutions:
-      pglass:
-        reagents:
-        - ReagentId: Silicon
-          Quantity: 10
-        - ReagentId: Plasma
-          Quantity: 10
-        canReact: false
-
-- type: entity
-  parent: SheetPGlass
-  id: SheetRPGlass
-  name: reinforced plasma glass
-  description: A reinforced sheet of translucent plasma.
-  suffix: Full
-  components:
-  - type: PhysicalComposition
-    materialComposition:
-      ReinforcedPlasmaGlass: 100
-  - type: Stack
-    stackType: ReinforcedPlasmaGlass
-    baseLayer: base
-    layerStates:
-    - rpglass
-    - rpglass_2
-    - rpglass_3
-  - type: Sprite
-    state: rpglass_3
-    layers:
-    - state: rpglass_3
-      map: ["base"]
-  - type: Item
-    heldPrefix: rpglass
-  - type: Construction
-    graph: Glass
-    node: SheetRPGlass
-  - type: Extractable
-    grindableSolutionName: rpglass
-  - type: SolutionContainerManager
-    solutions:
-      rpglass:
-        reagents:
-        - ReagentId: Silicon
-          Quantity: 10
-        - ReagentId: Plasma
-          Quantity: 10
-        - ReagentId: Iron
-          Quantity: 4.5
-        - ReagentId: Carbon
-          Quantity: 0.5
-        canReact: false
-
-- type: entity
-  parent: SheetRPGlass
-  id: SheetRPGlass1
-  name: reinforced plasma glass
-  suffix: Single
-  components:
-  - type: Sprite
-    state: rpglass
-  - type: Stack
-    stackType: ReinforcedPlasmaGlass
-    count: 1
