--- a/Resources/Prototypes/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/pda.yml
@@ -126,30 +126,17 @@
 
 - type: entity
   parent: BasePDA
-  id: CaptainPDA
-  name: captain PDA
-  description: Surprisingly no different from your PDA.
+  id: AssistantPDA
+  name: assistant PDA
+  description: Why isn't it gray?
   components:
   - type: Pda
-    id: CaptainIDCard
-    penSlot:
-      startingItem: PenCap
-      priority: -1
-      whitelist:
-        tags:
-        - Write
-  - type: Appearance
-    appearanceDataInit:
-     enum.PdaVisuals.PdaType:
-       !type:String
-       pda-captain
+    id: PassengerIDCard
   - type: PdaBorderColor
-    borderColor: "#7C5D00"
-  - type: Icon
-    state: pda-captain
+    borderColor: "#717059"
 
 - type: entity
-  parent: CentcomPDA
+  parent: BasePDA
   id: AdminPDA
   name: Admin PDA
   suffix: Admin
