--- a/Resources/Prototypes/temporary.yml
+++ b/Resources/Prototypes/temporary.yml
@@ -473,13 +473,13 @@
       sprite: Structures/Storage/Crates/secure.rsi
     - type: Sprite
       sprite: Structures/Storage/Crates/secure.rsi
-      
+
 - type: entity
   id: WindoorSecure
   parent: BaseSecureWindoor
   name: secure windoor
   description: It's a sturdy window and a sliding door. Wow!
-  
+
 - type: entity
   parent: CrateBaseWeldable
   id: CrateGenericSteel
@@ -498,7 +498,7 @@
     group: CrateSteel
   - type: RadiationBlockingContainer
     resistance: 2.5
-    
+
 - type: entity
   parent: BaseItem
   id: BaseVendingMachineRestock
@@ -544,7 +544,7 @@
       - !type:DumpRestockInventory
       - !type:DoActsBehavior
         acts: [ "Destruction" ]
-        
+
 - type: entity
   id: BaseXenoArtifact
   parent: BaseMob # we use this since it can technically get inhabited
@@ -581,8 +581,6 @@
     baseWalkSpeed: 0.25
     baseSprintSpeed: 0.5
   - type: UseDelay
-  - type: StealTarget
-    stealGroup: XenoArtifact
   - type: ContainerContainer
     containers:
       node-container: !type:Container
@@ -596,7 +594,7 @@
       Flammable: [Touch]
       Extinguish: [Touch]
       Acidic: [Touch]
-      
+
 - type: entity
   name: chemistry bag
   id: ChemBag
@@ -630,7 +628,7 @@
         - Syringe
         - Dropper
   - type: Dumpable
-  
+
 - type: reagent
   id: THC
   name: reagent-name-thc
@@ -652,10 +650,70 @@
         effectProto: StatusEffectSeeingRainbow
         time: 16
         type: Add
-        
+
 - type: ssdIcon #yes even if it doesnt render the game complains
   id: SSDIcon
   icon:
     sprite: /Textures/Effects/ssd.rsi
     state: default0
   locationPreference: Left
+
+
+- type: entity
+  parent: BaseAction
+  id: ActionBibleSummon
+  name: Summon familiar
+  description: Summon a familiar that will aid you and gain humanlike intelligence once inhabited by a soul.
+  components:
+  - type: Action
+    icon: { sprite: Clothing/Head/Hats/witch.rsi, state: icon }
+    useDelay: 1
+  - type: InstantAction
+    event: !type:SummonActionEvent
+    
+- type: reagent
+  id: FluorosulfuricAcid
+  name: reagent-name-fluorosulfuric-acid
+  group: Toxins
+  desc: reagent-desc-fluorosulfuric-acid
+  physicalDesc: reagent-physical-desc-strong-smelling
+  contrabandSeverity: Minor
+  flavor: acid
+  color: "#5050ff"
+  boilingPoint: 165
+  meltingPoint: -87
+  reactiveEffects:
+    Acidic:
+      methods: [ Touch ]
+      effects:
+      - !type:HealthChange
+        ignoreResistances: false
+        damage:
+          types:
+            Caustic: 0.3
+      - !type:Emote
+        emote: Scream
+        probability: 0.2
+  metabolisms:
+    Poison:
+      metabolismRate: 3.00 # High damage, high metabolism rate. You need a lot of units to crit. Simulates acid burning through you fast.
+      effects:
+      - !type:HealthChange
+        damage:
+          types:
+            Caustic: 8
+      - !type:PopupMessage
+        type: Local
+        visualType: Large
+        messages: [ "generic-reagent-effect-burning-insides" ]
+        probability: 0.33
+      - !type:Emote
+        emote: Scream
+        probability: 0.25
+        
+- type: speechVerb
+  id: Robotic
+  name: chat-speech-verb-name-robotic
+  speechVerbStrings:
+  - chat-speech-verb-robotic-1
+  - chat-speech-verb-robotic-2
