--- a/Resources/Prototypes/Tiles/plating.yml
+++ b/Resources/Prototypes/Tiles/plating.yml
@@ -64,11 +64,14 @@
   sprite: /Textures/Tiles/lattice.png
   baseTurf: Space
   isSubfloor: true
+  directionals: Lattice
+  directionalRequirement: ExistReversed
+  uniqueDirectionals: true
   deconstructTools: [ Cutting ]
   weather: true
   footstepSounds:
-    collection: FootstepCatwalk
-  friction: 1.5
+    collection: FootstepPlating
+  friction: 0.3
   isSpace: true
   itemDrop: PartRodMetal1
   heatCapacity: 10000
