--- a/Resources/Prototypes/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/base.yml
@@ -115,7 +115,7 @@
       Extinguish: [ Touch ]
       Acidic: [Touch, Ingestion]
     reactions:
-    - reagents: [Water, SpaceCleaner]
+    - reagents: [Water]
       methods: [Touch]
       effects:
       - !type:WashCreamPie
