--- a/Resources/Prototypes/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/pda.yml
@@ -114,15 +114,6 @@
     - WhitelistChameleonPDA
   - type: Input
     context: "human"
-  - type: SentienceTarget # sentient PDA = pAI lite
-    flavorKind: station-event-random-sentience-flavor-mechanical
-    weight: 0.001 # 1,000 PDAs = as likely to be picked as 1 regular animal
-  - type: BlockMovement
-    blockInteraction: false # lets the PDA toggle its own flashlight
-  - type: TypingIndicator
-    proto: robot
-  - type: Speech
-    speechVerb: Robotic
 
 - type: entity
   parent: BasePDA
@@ -131,7 +122,7 @@
   description: Why isn't it gray?
   components:
   - type: Pda
-    id: PassengerIDCard
+    id: AssistantIDCard
   - type: PdaBorderColor
     borderColor: "#717059"
 
