--- a/Resources/Prototypes/Entities/Structures/Power/apc.yml
+++ b/Resources/Prototypes/Entities/Structures/Power/apc.yml
@@ -21,7 +21,7 @@
     castShadows: false
     netsync: false
   - type: AccessReader
-    access: [["Engineering"]]
+    access: [["AllAccess"]]
   - type: Sprite
     drawdepth: WallMountedItems
     sprite: Structures/Power/apc.rsi
