--- a/Resources/Prototypes/Entities/Objects/Misc/folders.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/folders.yml
@@ -1,27 +1,4 @@
 - type: entity
-  parent: BaseItem
-  id: BoxFolderNuclearCodes
-  name: nuclear code folder
-  components:
-  - type: Sprite
-    sprite: Objects/Misc/folders.rsi
-    layers:
-    - state: folder-colormap
-      color: "#cc2323"
-    - state: folder-base
-    - state: folder-stamp-inverse
-      color: "#1dff00"
-  - type: PhysicalComposition
-    materialComposition:
-      Paper: 50
-  - type: SpawnItemsOnUse
-    items:
-    - id: NukeCodePaper
-    sound:
-      path: /Audio/Effects/packetrip.ogg
-  - type: Appearance
-
-- type: entity
   parent: BoxBase
   id: BoxFolderBaseEmpty
   name: folder
@@ -258,28 +235,6 @@
 
 - type: entity
   parent: BoxFolderBaseEmpty
-  id: BoxFolderCentComEmpty
-  categories: [ DoNotMap ]
-  name: CentComm folder
-  description: CentComm's miserable little pile of secrets!
-  components:
-  - type: Sprite
-    layers:
-    - state: folder-centcom
-    - state: folder-base
-
-- type: entity
-  parent: [BoxFolderCentComEmpty, BoxFolderFill]
-  id: BoxFolderCentCom
-  suffix: DO NOT MAP; Filled
-
-- type: entity
-  parent: [BoxFolderCentComEmpty, BoxFolderFillThreePapers]
-  id: BoxFolderCentComThreePapers
-  suffix: DO NOT MAP; 3 papers
-
-- type: entity
-  parent: BoxFolderBaseEmpty
   id: BoxFolderClipboardEmpty
   name: clipboard
   description: The weapon of choice for those on the front lines of bureaucracy.
@@ -381,41 +336,6 @@
   id: BoxFolderPlasticClipboardThreePapers
 
 - type: entity
-  parent: BoxFolderClipboardEmpty
-  id: BoxFolderCentComClipboardEmpty
-  name: CentComm clipboard
-  description: A luxurious clipboard upholstered with green velvet. Often seen carried by CentComm officials, seldom seen actually used.
-  components:
-  - type: Sprite
-    sprite: Objects/Misc/cc-clipboard.rsi
-    layers:
-    - state: clipboard
-    - state: clipboard_paper
-      map: ["clipboard_paper"]
-      visible: false
-    - state: clipboard_pen
-      map: ["clipboard_pen"]
-      visible: false
-    - state: clipboard_over
-  - type: Item
-    sprite: Objects/Misc/cc-clipboard.rsi
-  - type: Clothing
-    sprite: Objects/Misc/cc-clipboard.rsi
-  - type: PhysicalComposition
-    materialComposition: # same composition as regular clipboard + bit of cloth because it's "upholstered with green velvet"
-      Wood: 50
-      Steel: 25
-      Cloth: 25
-
-- type: entity
-  parent: [BoxFolderCentComClipboardEmpty, BoxFolderFill]
-  id: BoxFolderCentComClipboard
-
-- type: entity
-  parent: [BoxFolderCentComClipboardEmpty, BoxFolderFillThreePapers]
-  id: BoxFolderCentComClipboardThreePapers
-
-- type: entity
   parent: [BoxFolderClipboardEmpty]
   id: BoxFolderQmClipboard
   name: requisition digi-board
@@ -460,7 +380,7 @@
           tags:
           - Write
   - type: CargoOrderConsole
-    removeLimitAccess: [ "Quartermaster" ]
+    removeLimitAccess: [ "AllAccess" ]
   - type: ActivatableUI
     verbText: qm-clipboard-computer-verb-text
     key: enum.CargoConsoleUiKey.Orders
