--- a/Resources/Prototypes/Entities/Objects/Misc/paper.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/paper.yml
@@ -101,6 +101,18 @@
     - state: scrap
 
 - type: entity
+  name: office paper
+  parent: Paper
+  id: PaperOffice
+  description: 'A plain sheet of office paper.'
+  components:
+  - type: PaperVisuals
+    backgroundImagePath: "/Textures/Interface/Paper/paper_background_default.svg.96dpi.png"
+    contentImagePath: "/Textures/Interface/Paper/paper_content_lined.svg.96dpi.png"
+    backgroundPatchMargin: 16.0, 16.0, 16.0, 16.0
+    contentMargin: 16.0, 16.0, 16.0, 16.0
+
+- type: entity
   parent: Paper
   id: PaperWritten
   categories: [ HideSpawnMenu ]
