--- a/Resources/Prototypes/Entities/Structures/Machines/vending_machines.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/vending_machines.yml
@@ -260,7 +260,7 @@
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
-    access: [["Bar"]]
+    access: [["AllAccess"]]
   - type: GuideHelp
     guides:
     - Bartender
@@ -294,7 +294,7 @@
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
-    access: [["SyndicateAgent"]]
+    access: [["AllAccess"]]
   - type: GuideHelp
     guides:
     - Bartender
@@ -328,7 +328,7 @@
     energy: 2.0
     color: "#ffb0b0"
   - type: AccessReader
-    access: [["HeadOfPersonnel"]]
+    access: [["AllAccess"]]
 
 - type: entity
   parent: VendingMachine
@@ -357,7 +357,7 @@
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
-    access: [["Service"]]
+    access: [["AllAccess"]]
   - type: PointLight
     radius: 1.5
     energy: 3.0
@@ -528,7 +528,7 @@
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
-    access: [["Kitchen"]]
+    access: [["AllAccess"]]
   - type: PointLight
     radius: 1.5
     energy: 3.0
@@ -558,7 +558,7 @@
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
-    access: [["Engineering"]]
+    access: [["AllAccess"]]
   - type: PointLight
     radius: 1.5
     energy: 3.0
@@ -618,7 +618,7 @@
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
-    access: [["Medical"]]
+    access: [["AllAccess"]]
 
 - type: entity
   parent: VendingMachine
@@ -659,7 +659,7 @@
   suffix: Hydroponics
   components:
   - type: AccessReader
-    access: [["Hydroponics"]]
+    access: [["AllAccess"]]
 
 - type: entity
   parent: VendingMachine
@@ -939,7 +939,7 @@
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
-    access: [["Research"]]
+    access: [["AllAccess"]]
   - type: PointLight
     radius: 1.5
     energy: 3.0
@@ -1068,7 +1068,7 @@
     energy: 3.0
     color: "#b89f25"
   - type: AccessReader
-    access: [["Salvage"]]
+    access: [["AllAccess"]]
   - type: GuideHelp
     guides:
     - Salvage
@@ -1138,7 +1138,7 @@
     energy: 3.0
     color: "#326e3f"
   - type: AccessReader
-    access: [["Hydroponics"]]
+    access: [["AllAccess"]]
 
 - type: entity
   parent: VendingMachine
@@ -1166,7 +1166,7 @@
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
-    access: [["Lawyer"]]
+    access: [["AllAccess"]]
 
 - type: entity
   parent: VendingMachine
@@ -1224,7 +1224,7 @@
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
-    access: [["Bar"]]
+    access: [["AllAccess"]]
 
 - type: entity
   parent: VendingMachine
@@ -1248,7 +1248,7 @@
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
-    access: [["Chapel"]]
+    access: [["AllAccess"]]
   - type: PointLight
     radius: 1.5
     energy: 3.0
@@ -1284,7 +1284,7 @@
     energy: 3.0
     color: "#b89e2a"
   - type: AccessReader
-    access: [["Cargo"]]
+    access: [["AllAccess"]]
 
 - type: entity
   parent: VendingMachine
@@ -1312,7 +1312,7 @@
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
-    access: [["Medical"]]
+    access: [["AllAccess"]]
 
 - type: entity
   parent: VendingMachine
@@ -1340,7 +1340,7 @@
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
-    access: [["Chemistry"]]
+    access: [["AllAccess"]]
 
 - type: entity
   parent: VendingMachine
@@ -1368,7 +1368,7 @@
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
-    access: [["Service"]]
+    access: [["AllAccess"]]
 
 - type: entity
   parent: VendingMachine
@@ -1400,7 +1400,7 @@
     energy: 3.0
     color: "#b89e2a"
   - type: AccessReader
-    access: [["Engineering"]]
+    access: [["AllAccess"]]
 
 - type: entity
   parent: VendingMachine
@@ -1432,7 +1432,7 @@
     energy: 3.0
     color: "#b89e2a"
   - type: AccessReader
-    access: [["Engineering"]]
+    access: [["AllAccess"]]
 
 - type: entity
   parent: VendingMachine
@@ -1460,7 +1460,7 @@
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
-    access: [["Kitchen"]]
+    access: [["AllAccess"]]
 
 - type: entity
   parent: VendingMachine
@@ -1488,7 +1488,7 @@
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
-    access: [["Detective"]]
+    access: [["AllAccess"]]
 
 - type: entity
   parent: VendingMachine
@@ -1520,7 +1520,7 @@
     energy: 3.0
     color: "#6927C5"
   - type: AccessReader
-    access: [["Janitor"]]
+    access: [["AllAccess"]]
 
 - type: entity
   parent: VendingMachine
@@ -1548,7 +1548,7 @@
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
-    access: [["Research"]]
+    access: [["AllAccess"]]
 
 - type: entity
   parent: VendingMachine
@@ -1580,7 +1580,7 @@
     energy: 3.0
     color: "#d82929"
   - type: AccessReader
-    access: [["NuclearOperative"], ["SyndicateAgent"]]
+    access: [["AllAccess"], ["Maintenance"]]
 
 - type: entity
   parent: VendingMachine
@@ -1608,7 +1608,7 @@
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
-    access: [["Research"]]
+    access: [["AllAccess"]]
 
 - type: entity
   parent: VendingMachine
@@ -1636,7 +1636,7 @@
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
-    access: [["Medical"]]
+    access: [["AllAccess"]]
 
 - type: entity
   parent: VendingMachine
@@ -1664,7 +1664,7 @@
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
-    access: [["Medical"]]
+    access: [["AllAccess"]]
 
 - type: entity
   parent: VendingMachine
@@ -1692,7 +1692,7 @@
     energy: 3.0
     color: "#48CF48"
   - type: AccessReader
-    access: [["CentralCommand"]]
+    access: [["AllAccess"]]
 
 - type: entity
   parent: VendingMachine
@@ -1730,7 +1730,7 @@
   - type: SpeakOnUIClosed
     pack: HappyHonkGoodbyes
   - type: AccessReader
-    access: [["Kitchen"], ["Theatre"]]
+    access: [["AllAccess"], ["Maintenance"]]
 
 # Pride Vending Machine
 
@@ -1818,7 +1818,7 @@
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
-    access: [["Chemistry"]]
+    access: [["AllAccess"]]
   - type: GuideHelp
     guides:
     - Chemicals
@@ -1838,7 +1838,7 @@
     denyState: deny
     ejectDelay: 2
   - type: AccessReader
-    access: [["SyndicateAgent"]]
+    access: [["AllAccess"]]
 
 # wallmount
 - type: entity
@@ -1889,4 +1889,4 @@
     - texture: Structures/Machines/VendingMachines/maintenance_panel.png
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
-    access: [["Medical"]]
+    access: [["AllAccess"]]
