--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/hypospray.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/hypospray.yml
@@ -146,7 +146,7 @@
       pen:
         maxVol: 15
         reagents:
-        - ReagentId: Ultravasculine
+        - ReagentId: Dylovene
           Quantity: 10
         - ReagentId: Epinephrine
           Quantity: 5
