--- a/Resources/Prototypes/Entities/Structures/Furniture/beds.yml
+++ b/Resources/Prototypes/Entities/Structures/Furniture/beds.yml
@@ -28,9 +28,9 @@
     position: Down
     rotation: -90
   # Construction has to be before PlaceableSurface or you'll place things onto the entity instead of deconstructing it.
-  - type: Construction
-    graph: bed
-    node: bed
+#  - type: Construction
+#    graph: bed
+#    node: bed
   # So that you can put bedsheets on beds again. Would be cool to have a tag
   # for this so that only bedsheets can be placed.
   - type: PlaceableSurface
