--- a/Resources/Prototypes/Recipes/Reactions/fun.yml
+++ b/Resources/Prototypes/Recipes/Reactions/fun.yml
@@ -47,22 +47,12 @@
   - Stir # prevents turning slimes to glue, TODO: make it react only X units per second; make bloodstream an open thermal system
   minTemp: 370
   reactants:
-    SpaceLube:
-      amount: 1
+#    SpaceLube:
+#      amount: 1
     Slime:
       amount: 1
   products:
     SpaceGlue: 2
-
-- type: reaction
-  id: Licoxide
-  reactants:
-    Lithium:
-      amount: 1
-    Zinc:
-      amount: 1
-  products:
-    Licoxide: 1
 
 - type: reaction
   id: PlasticSheet # It's here because "haha look you can get smooth beautiful sheets of plastic from small cylindric beaker" (jokes aside: i dont know where should i put it)
