Workerdrone work submission 3 (#21)

--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/ingredients.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/ingredients.yml
@@ -263,7 +263,7 @@
     node: flat
   - type: SliceableFood
     count: 3
-    slice: FoodCroissantRaw
+    slice: FoodDoughRope
 
 - type: entity
   parent: FoodBakingBase
