--- a/Resources/Prototypes/Entities/Objects/Materials/Sheets/other.yml
+++ b/Resources/Prototypes/Entities/Objects/Materials/Sheets/other.yml
@@ -242,3 +242,53 @@
   components:
   - type: Stack
     count: 1
+
+- type: entity
+  parent: SheetOtherBase
+  id: MaterialSheetMeat
+  name: meat sheet
+  suffix: Full
+  components:
+    - type: Sprite
+      sprite: Objects/Materials/Sheets/meaterial.rsi
+      layers:
+      - state: meat_3
+        map: [ "base" ]
+    - type: Tag
+      tags:
+      - Sheet
+    - type: Material
+    - type: PhysicalComposition
+      materialComposition:
+        Meaterial: 100
+    - type: Stack
+      stackType: MeatSheets
+      baseLayer: base
+      layerStates:
+        - meat
+        - meat_2
+        - meat_3
+    - type: Item
+      sprite: Objects/Materials/Sheets/meaterial.rsi
+      heldPrefix: meat
+    - type: Extractable
+      grindableSolutionName: meatsheet
+    - type: SolutionContainerManager
+      solutions:
+        meatsheet:
+          reagents:
+          - ReagentId: Protein
+            Quantity: 7
+          - ReagentId: Fat
+            Quantity: 3
+          canReact: false
+
+- type: entity
+  parent: MaterialSheetMeat
+  id: MaterialSheetMeat1
+  suffix: Single
+  components:
+    - type: Sprite
+      state: meat
+    - type: Stack
+      count: 1
