--- a/Resources/Prototypes/Reagents/cleaning.yml
+++ b/Resources/Prototypes/Reagents/cleaning.yml
@@ -34,7 +34,7 @@
   name: reagent-name-soap
   desc: reagent-desc-soap
   physicalDesc: reagent-physical-desc-soapy
-  flavor: clean
+  flavor: bitter
   color: "#c8dfc9"
   recognizable: true
   boilingPoint: 100.0
