--- a/Resources/Prototypes/Entities/Objects/Devices/cartridges.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/cartridges.yml
@@ -112,9 +112,9 @@
         sprite: Structures/Doors/Airlocks/Standard/security.rsi
         state: closed
     - type: LogProbeCartridge
-    - type: GuideHelp
-      guides:
-      - Forensics
+#    - type: GuideHelp
+#      guides:
+#      - Forensics
 
 - type: entity
   parent: BasePDACartridge
