--- a/Resources/Prototypes/Hydroponics/seeds.yml
+++ b/Resources/Prototypes/Hydroponics/seeds.yml
@@ -25,6 +25,32 @@
       PotencyDivisor: 20
 
 - type: seed
+  id: potato
+  name: seeds-potato-name
+  noun: seeds-noun-seeds
+  displayName: seeds-potato-display-name
+  plantRsi: Objects/Specific/Hydroponics/potato.rsi
+  packetPrototype: PotatoSeeds
+  productPrototypes:
+    - FoodPotato
+  lifespan: 30
+  maturation: 10
+  production: 3
+  yield: 3
+  potency: 10
+  growthStages: 4
+  waterConsumption: 0.60
+  chemicals:
+    Nutriment:
+      Min: 1
+      Max: 10
+      PotencyDivisor: 10
+    Vitamin:
+      Min: 1
+      Max: 4
+      PotencyDivisor: 25
+
+- type: seed
   id: chanterelle
   name: seeds-chanterelle-name
   noun: seeds-noun-spores
