--- a/Resources/Prototypes/Reagents/fun.yml
+++ b/Resources/Prototypes/Reagents/fun.yml
@@ -5,3 +5,65 @@
   physicalDesc: reagent-physical-desc-fibrous
   flavor: fiber
   color: "#808080"
+
+- type: reagent
+  id: Razorium
+  name: reagent-name-razorium
+  group: Toxins
+  slipData:
+    requiredSlipSpeed: 3.5
+  desc: reagent-desc-razorium
+  physicalDesc: reagent-physical-desc-reflective
+  flavor: sharp
+  color: "#e3fffb"
+  reactiveEffects:
+    Acidic:
+      methods: [ Touch ]
+      effects:
+      - !type:HealthChange
+        ignoreResistances: false
+        damage:
+          types:
+            Slash: 0.25
+      - !type:Emote
+        emote: Scream
+        probability: 0.7
+  metabolisms:
+    Poison:
+      metabolismRate : 3.00
+      effects:
+      - !type:HealthChange
+        damage:
+          types:
+             Slash : 9
+      - !type:PopupMessage
+        type: Local
+        visualType: LargeCaution
+        messages: [ "generic-reagent-effect-slicing-insides"]
+        probability: 0.33
+      - !type:Emote
+        emote: Scream
+        probability: 0.3
+
+- type: reagent
+  id: Laughter
+  name: reagent-name-laughter
+  group: Special
+  desc: reagent-desc-laughter
+  physicalDesc: reagent-physical-desc-funny
+  flavor: funny
+  color: "#FF4DD2"
+  slipData:
+    requiredSlipSpeed: 3.5 #clown juice gotta slip
+  metabolisms:
+    Medicine:
+      effects:
+      - !type:Emote
+        emote: Laugh
+        showInGuidebook: true
+        probability: 0.3
+      - !type:PopupMessage
+        type: Local
+        visualType: Large
+        messages: [ "laughter-effect-control-laughter" ]
+        probability: 0.2
