YAML work part 4 I guess. (#22)
Co-authored-by: Ghost581 <85649313+Ghost581X@users.noreply.github.com>
Co-authored-by: ninruB <ninrub@tuta.io>

--- a/Resources/Prototypes/Entities/Objects/Materials/materials.yml
+++ b/Resources/Prototypes/Entities/Objects/Materials/materials.yml
@@ -265,3 +265,17 @@
       Gunpowder: 100
   - type: Item
     size: Tiny
+
+- type: entity
+  parent: MaterialBase
+  id: MaterialCoal
+  name: coal
+  description: Perfect for your stockings.
+  components:
+  - type: Stack
+    stackType: Gunpowder
+    count: 1
+  - type: Sprite
+    sprite: Objects/Misc/reagent_fillings.rsi
+    state: powderpile
+    color: "#221f1f"
