--- a/Resources/Prototypes/Reagents/Materials/materials.yml
+++ b/Resources/Prototypes/Reagents/Materials/materials.yml
@@ -75,3 +75,6 @@
   unit: materials-unit-piece
   icon: { sprite: Objects/Materials/ore.rsi, state: coal }
   color: "#404040"
+
+- type: material
+  id: Gunpowder #love me an upset linter but IDK if its the right way to handle gunpowder. The chem is not the same as the item.
